--- a/connexion - Copie.html
+++ b/connexion - Copie.html
@@ -289,54 +289,32 @@
         }
 
         .social-buttons {
-            display: flex;
-            flex-direction: column;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
             gap: 12px;
             margin-bottom: 24px;
         }
 
         .social-btn {
-            width: 100%;
-            padding: 14px 20px;
-            background: #ffffff;
-            border: 2px solid rgba(255, 255, 255, 0.3);
+            padding: 12px;
+            background: rgba(255, 255, 255, 0.08);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 12px;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 12px;
+            gap: 8px;
             cursor: pointer;
             transition: all 0.3s ease;
-            font-size: 15px;
+            font-size: 14px;
             font-weight: 600;
-            color: #1a1a2e;
-            font-family: 'Inter', sans-serif;
+            color: rgba(255, 255, 255, 0.9);
         }
 
-        .social-btn-google {
-            border-color: #4285F4;
-        }
-
-        .social-btn-google:hover {
-            background: #f8f9fa;
-            border-color: #4285F4;
+        .social-btn:hover {
+            background: rgba(255, 255, 255, 0.12);
+            border-color: rgba(255, 255, 255, 0.2);
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(66, 133, 244, 0.3);
-        }
-
-        .social-btn-facebook {
-            border-color: #1877F2;
-        }
-
-        .social-btn-facebook:hover {
-            background: #f0f4ff;
-            border-color: #1877F2;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(24, 119, 242, 0.3);
-        }
-
-        .social-btn:active {
-            transform: translateY(0);
         }
 
         .signup-link {
@@ -395,38 +373,12 @@
             <!-- Form -->
             <div class="form-container">
                 <form id="loginForm">
-                    <!-- Social Login Buttons (Top) -->
-                    <div class="social-buttons" style="margin-bottom: 24px;">
-                        <button type="button" class="social-btn social-btn-google" onclick="socialLogin('google')">
-                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                                <path d="M19.6 10.23c0-.82-.07-1.43-.21-2.05H10v3.72h5.51c-.11.92-.72 2.31-2.08 3.24l-.02.13 3.03 2.34.21.02c1.92-1.77 3.03-4.38 3.03-7.4z" fill="#4285F4"/>
-                                <path d="M10 20c2.7 0 4.96-.88 6.62-2.39l-3.22-2.49c-.85.58-1.98 1-3.4 1-2.61 0-4.82-1.74-5.61-4.13l-.12.01-3.14 2.42-.04.11C2.61 17.91 6.08 20 10 20z" fill="#34A853"/>
-                                <path d="M4.39 11.99c-.2-.58-.32-1.2-.32-1.84 0-.64.11-1.26.31-1.84l-.01-.14-3.18-2.46-.1.05C.41 7.43 0 8.68 0 10c0 1.32.41 2.57 1.1 3.58l3.29-2.59z" fill="#FBBC05"/>
-                                <path d="M10 3.88c1.85 0 3.1.8 3.81 1.47l2.8-2.73C14.96.88 12.7 0 10 0 6.08 0 2.61 2.09 1.1 5.17l3.29 2.59c.79-2.39 3-4.13 5.61-4.13z" fill="#EB4335"/>
-                            </svg>
-                            <span>Continuer avec Google</span>
-                        </button>
-                        <button type="button" class="social-btn social-btn-facebook" onclick="socialLogin('facebook')">
-                            <svg width="20" height="20" viewBox="0 0 20 20" fill="#1877F2">
-                                <path d="M20 10c0-5.523-4.477-10-10-10S0 4.477 0 10c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V10h2.54V7.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.563V10h2.773l-.443 2.89h-2.33v6.988C16.343 19.128 20 14.991 20 10z"/>
-                            </svg>
-                            <span>Continuer avec Facebook</span>
-                        </button>
-                    </div>
-
-                    <!-- Divider -->
-                    <div class="divider" style="margin: 24px 0;">
-                        <div class="divider-line"></div>
-                        <span class="divider-text">Ou avec email/téléphone</span>
-                        <div class="divider-line"></div>
-                    </div>
-
                     <!-- Email / Phone -->
                     <div class="form-group">
                         <label for="identifier">Email ou téléphone</label>
-                        <input
-                            type="text"
-                            id="identifier"
+                        <input 
+                            type="text" 
+                            id="identifier" 
                             name="identifier"
                             placeholder="votre@email.com ou +221 77 123 45 67"
                             required
@@ -461,6 +413,25 @@
                     <button type="submit" class="login-btn">
                         Se connecter
                     </button>
+
+                    <!-- Divider -->
+                    <div class="divider">
+                        <div class="divider-line"></div>
+                        <span class="divider-text">Ou continuer avec</span>
+                        <div class="divider-line"></div>
+                    </div>
+
+                    <!-- Social Buttons -->
+                    <div class="social-buttons">
+                        <button type="button" class="social-btn" onclick="socialLogin('google')">
+                            <span>🔍</span>
+                            <span>Google</span>
+                        </button>
+                        <button type="button" class="social-btn" onclick="socialLogin('facebook')">
+                            <span>📘</span>
+                            <span>Facebook</span>
+                        </button>
+                    </div>
 
                     <!-- Signup Link -->
                     <div class="signup-link">
@@ -510,83 +481,19 @@
             }, 1500);
         }
 
-        document.getElementById('loginForm').addEventListener('submit', async function(e) {
+        document.getElementById('loginForm').addEventListener('submit', function(e) {
             e.preventDefault();
 
             const identifier = document.getElementById('identifier').value;
             const password = document.getElementById('password').value;
 
             if (identifier && password) {
-                try {
-                    // Afficher un loader
-                    const submitButton = document.querySelector('button[type="submit"]');
-                    const originalText = submitButton.textContent;
-                    submitButton.textContent = 'Connexion en cours...';
-                    submitButton.disabled = true;
+                alert('Connexion réussie !\n\nRedirection vers le tableau de bord...');
 
-                    // Appeler l'API de connexion
-                    const response = await fetch('http://localhost:5000/api/v1/auth/login', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify({
-                            email: identifier,
-                            password: password
-                        })
-                    });
-
-                    const result = await response.json();
-
-                    console.log('Login response:', result);
-
-                    if (response.ok && result.success) {
-                        console.log('=== LOGIN SUCCESS ===');
-                        console.log('Full response:', result);
-
-                        // Sauvegarder le token et les données utilisateur
-                        const token = result.data.token;
-                        const user = result.data.user;
-
-                        console.log('Token to save:', token);
-                        console.log('User data to save:', user);
-
-                        localStorage.setItem('authToken', token);
-                        localStorage.setItem('userData', JSON.stringify(user));
-
-                        // Vérifier immédiatement après sauvegarde
-                        const savedToken = localStorage.getItem('authToken');
-                        const savedUser = localStorage.getItem('userData');
-
-                        console.log('Verification - Token saved:', savedToken ? 'Yes' : 'No', savedToken);
-                        console.log('Verification - User data saved:', savedUser ? 'Yes' : 'No', savedUser);
-
-                        // Déterminer le dashboard
-                        const userType = user.user_type;
-                        const dashboardUrl = userType === 'expediteur' ? 'dashexpediteur.html' : 'dashgp.html';
-
-                        console.log('User type:', userType);
-                        console.log('Redirecting to:', dashboardUrl);
-
-                        alert('Connexion réussie !\n\nRedirection vers le tableau de bord...');
-
-                        // Rediriger immédiatement après l'alerte
-                        window.location.href = dashboardUrl;
-                    } else {
-                        // Afficher l'erreur
-                        alert('Erreur de connexion:\n\n' + (result.message || 'Email ou mot de passe incorrect'));
-                        submitButton.textContent = originalText;
-                        submitButton.disabled = false;
-                    }
-                } catch (error) {
-                    console.error('Erreur:', error);
-                    alert('Erreur de connexion:\n\nImpossible de se connecter au serveur. Assurez-vous que le backend est démarré.');
-
-                    // Réactiver le bouton
-                    const submitButton = document.querySelector('button[type="submit"]');
-                    submitButton.textContent = 'Se connecter';
-                    submitButton.disabled = false;
-                }
+                // Rediriger vers le dashboard après connexion
+                setTimeout(() => {
+                    window.location.href = 'dashexpediteur.html';
+                }, 1500);
             }
         });
 
