--- a/notifications - Copie.html
+++ b/notifications - Copie.html
@@ -446,12 +446,207 @@
 
             <!-- Today's Notifications -->
             <div class="notif-section" id="allNotifications">
-                <!-- Les notifications seront chargées dynamiquement -->
+                <div class="section-date">Aujourd'hui</div>
+
+                <!-- Notification 1 -->
+                <div class="notif-card unread" onclick="viewNotification(1)">
+                    <div class="notif-header">
+                        <div class="notif-icon success">✅</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">Colis livré avec succès</h3>
+                            <p class="notif-message">Votre colis SG-20251015-C3D4 a été livré à New York. Le destinataire a confirmé la réception.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">Il y a 2 heures</span>
+                                <span class="notif-category">Livraison</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Notification 2 -->
+                <div class="notif-card unread" onclick="viewNotification(2)">
+                    <div class="notif-header">
+                        <div class="notif-icon info">📦</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">Mise à jour du suivi</h3>
+                            <p class="notif-message">Votre colis SG-20251020-A1B2 est en transit. Arrivée prévue le 21 Oct à Paris.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">Il y a 4 heures</span>
+                                <span class="notif-category">Suivi</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Notification 3 -->
+                <div class="notif-card unread" onclick="viewNotification(3)">
+                    <div class="notif-header">
+                        <div class="notif-icon warning">💰</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">Paiement reçu</h3>
+                            <p class="notif-message">Votre paiement de 45,000 FCFA pour SG-20251020-A1B2 a été confirmé.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">Il y a 6 heures</span>
+                                <span class="notif-category">Paiement</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="section-date">Hier</div>
+
+                <!-- Notification 4 -->
+                <div class="notif-card unread" onclick="viewNotification(4)">
+                    <div class="notif-header">
+                        <div class="notif-icon info">✈️</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">GP trouvé pour votre colis</h3>
+                            <p class="notif-message">Amadou D. a accepté de transporter votre colis vers Paris. Départ prévu le 19 Oct.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">Hier à 18:30</span>
+                                <span class="notif-category">GP</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Notification 5 -->
+                <div class="notif-card unread" onclick="viewNotification(5)">
+                    <div class="notif-header">
+                        <div class="notif-icon alert">⚠️</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">Réclamation en traitement</h3>
+                            <p class="notif-message">Votre réclamation REC-001 a été prise en charge. Nous vous contacterons sous 48h.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">Hier à 14:20</span>
+                                <span class="notif-category">Support</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="section-date">Cette semaine</div>
+
+                <!-- Notification 6 -->
+                <div class="notif-card" onclick="viewNotification(6)">
+                    <div class="notif-header">
+                        <div class="notif-icon success">🎉</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">Bienvenue sur SEN GP !</h3>
+                            <p class="notif-message">Merci de nous faire confiance. Profitez de -20% sur votre premier envoi avec le code WELCOME20.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">15 Oct 2025</span>
+                                <span class="notif-category">Promo</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Notification 7 -->
+                <div class="notif-card" onclick="viewNotification(7)">
+                    <div class="notif-header">
+                        <div class="notif-icon info">📍</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">Localisation mise à jour</h3>
+                            <p class="notif-message">Votre colis SG-20251012-E5F6 est maintenant à l'aéroport de Dakar.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">13 Oct 2025</span>
+                                <span class="notif-category">Suivi</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Notification 8 -->
+                <div class="notif-card" onclick="viewNotification(8)">
+                    <div class="notif-header">
+                        <div class="notif-icon success">⭐</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">Évaluez votre expérience</h3>
+                            <p class="notif-message">Comment s'est passée votre livraison avec Fatou S. ? Laissez-lui une note.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">10 Oct 2025</span>
+                                <span class="notif-category">Feedback</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- Unread Notifications (hidden by default) -->
             <div class="notif-section" id="unreadNotifications" style="display: none;">
-                <!-- Les notifications non lues seront chargées dynamiquement -->
+                <div class="section-date">Non lues (5)</div>
+
+                <!-- Same first 5 notifications as above -->
+                <div class="notif-card unread" onclick="viewNotification(1)">
+                    <div class="notif-header">
+                        <div class="notif-icon success">✅</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">Colis livré avec succès</h3>
+                            <p class="notif-message">Votre colis SG-20251015-C3D4 a été livré à New York.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">Il y a 2 heures</span>
+                                <span class="notif-category">Livraison</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="notif-card unread" onclick="viewNotification(2)">
+                    <div class="notif-header">
+                        <div class="notif-icon info">📦</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">Mise à jour du suivi</h3>
+                            <p class="notif-message">Votre colis SG-20251020-A1B2 est en transit.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">Il y a 4 heures</span>
+                                <span class="notif-category">Suivi</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="notif-card unread" onclick="viewNotification(3)">
+                    <div class="notif-header">
+                        <div class="notif-icon warning">💰</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">Paiement reçu</h3>
+                            <p class="notif-message">Votre paiement de 45,000 FCFA a été confirmé.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">Il y a 6 heures</span>
+                                <span class="notif-category">Paiement</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="notif-card unread" onclick="viewNotification(4)">
+                    <div class="notif-header">
+                        <div class="notif-icon info">✈️</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">GP trouvé pour votre colis</h3>
+                            <p class="notif-message">Amadou D. a accepté de transporter votre colis.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">Hier à 18:30</span>
+                                <span class="notif-category">GP</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="notif-card unread" onclick="viewNotification(5)">
+                    <div class="notif-header">
+                        <div class="notif-icon alert">⚠️</div>
+                        <div class="notif-content">
+                            <h3 class="notif-title">Réclamation en traitement</h3>
+                            <p class="notif-message">Votre réclamation REC-001 a été prise en charge.</p>
+                            <div class="notif-footer">
+                                <span class="notif-time">Hier à 14:20</span>
+                                <span class="notif-category">Support</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -508,155 +703,32 @@
             }
         }
 
-        const API_BASE_URL = 'http://localhost:5000/api/v1';
+        function markAllAsRead() {
+            const unreadCards = document.querySelectorAll('.notif-card.unread');
+            unreadCards.forEach(card => {
+                card.classList.remove('unread');
+            });
 
-        function getAuthToken() {
-            return localStorage.getItem('authToken');
+            // Update header
+            document.querySelector('.header-title p').textContent = '0 non lues';
+
+            // Update badge
+            const badge = document.querySelector('.nav-item.active .nav-badge');
+            if (badge) badge.style.display = 'none';
+
+            alert('Toutes les notifications ont été marquées comme lues.');
         }
 
-        async function loadUserNotifications() {
-            const token = getAuthToken();
-            if (!token) {
-                window.location.href = 'connexion.html';
-                return;
-            }
+        function viewNotification(id) {
+            // Mark as read
+            event.currentTarget.classList.remove('unread');
 
-            try {
-                const response = await fetch(`${API_BASE_URL}/notifications/my-notifications`, {
-                    headers: {
-                        'Authorization': `Bearer ${token}`
-                    }
-                });
-
-                if (response.ok) {
-                    const result = await response.json();
-                    displayNotifications(result.data || []);
-                } else {
-                    console.error('Failed to load notifications');
-                }
-            } catch (error) {
-                console.error('Error loading notifications:', error);
-            }
-        }
-
-        function displayNotifications(notifications) {
-            const unreadCount = notifications.filter(n => !n.is_read).length;
+            // Update count
+            const unreadCount = document.querySelectorAll('.notif-card.unread').length;
             document.querySelector('.header-title p').textContent = `${unreadCount} non lues`;
 
-            const badge = document.querySelector('.nav-item[onclick*="notifications"] .nav-badge');
-            if (badge) {
-                if (unreadCount > 0) {
-                    badge.textContent = unreadCount;
-                    badge.style.display = 'flex';
-                } else {
-                    badge.style.display = 'none';
-                }
-            }
-
-            // Group by date and render
-            const allContainer = document.getElementById('allNotifications');
-            const unreadContainer = document.getElementById('unreadNotifications');
-
-            if (allContainer && notifications.length > 0) {
-                allContainer.innerHTML = notifications.map(n => createNotificationCard(n)).join('');
-            }
-
-            if (unreadContainer) {
-                const unread = notifications.filter(n => !n.is_read);
-                if (unread.length > 0) {
-                    unreadContainer.innerHTML = unread.map(n => createNotificationCard(n)).join('');
-                } else {
-                    unreadContainer.innerHTML = '<p style="text-align:center;color:rgba(255,255,255,0.5);padding:40px;">Aucune notification non lue</p>';
-                }
-            }
+            alert(`Notification ${id} ouverte.\n\nDétails complets de la notification...`);
         }
-
-        function createNotificationCard(notif) {
-            const icons = {
-                delivery: '📦',
-                tracking: '📍',
-                payment: '💰',
-                support: '💬',
-                promo: '🎁',
-                feedback: '⭐'
-            };
-
-            return `
-                <div class="notif-card ${!notif.is_read ? 'unread' : ''}" onclick="viewNotification('${notif.notification_id}')">
-                    <div class="notif-icon">${icons[notif.type] || '🔔'}</div>
-                    <div class="notif-content">
-                        <div class="notif-title">${notif.title}</div>
-                        <div class="notif-message">${notif.message}</div>
-                        <div class="notif-time">${formatTime(notif.created_at)}</div>
-                    </div>
-                    ${!notif.is_read ? '<div class="unread-dot"></div>' : ''}
-                </div>
-            `;
-        }
-
-        function formatTime(dateString) {
-            const date = new Date(dateString);
-            const now = new Date();
-            const diffMs = now - date;
-            const diffMins = Math.floor(diffMs / 60000);
-            const diffHours = Math.floor(diffMs / 3600000);
-            const diffDays = Math.floor(diffMs / 86400000);
-
-            if (diffMins < 1) return 'À l\'instant';
-            if (diffMins < 60) return `Il y a ${diffMins} min`;
-            if (diffHours < 24) return `Il y a ${diffHours}h`;
-            if (diffDays < 7) return `Il y a ${diffDays}j`;
-            return date.toLocaleDateString('fr-FR');
-        }
-
-        async function markAllAsRead() {
-            const token = getAuthToken();
-
-            try {
-                const response = await fetch(`${API_BASE_URL}/notifications/mark-all-read`, {
-                    method: 'PUT',
-                    headers: {
-                        'Authorization': `Bearer ${token}`
-                    }
-                });
-
-                if (response.ok) {
-                    alert('Toutes les notifications ont été marquées comme lues.');
-                    loadUserNotifications();
-                } else {
-                    alert('Erreur lors de la mise à jour');
-                }
-            } catch (error) {
-                console.error('Error marking all as read:', error);
-            }
-        }
-
-        async function viewNotification(id) {
-            const token = getAuthToken();
-
-            try {
-                await fetch(`${API_BASE_URL}/notifications/${id}/read`, {
-                    method: 'PUT',
-                    headers: {
-                        'Authorization': `Bearer ${token}`
-                    }
-                });
-
-                // Mark as read locally
-                event.currentTarget.classList.remove('unread');
-
-                // Update count
-                const unreadCount = document.querySelectorAll('.notif-card.unread').length;
-                document.querySelector('.header-title p').textContent = `${unreadCount} non lues`;
-            } catch (error) {
-                console.error('Error marking notification as read:', error);
-            }
-        }
-
-        // Load notifications on page load
-        window.addEventListener('load', () => {
-            loadUserNotifications();
-        });
 
         function navigateTo(section) {
             const pages = {
